fix(footer): txt align items

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -89,6 +89,7 @@ footer {
   background-color: var(--footer-background);
   color: var(--footer-foreground);
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding: 0.6em 0.5em;
 }
